# nonebot2_uocr_low

./: README.md  __init__.py  _recognize.py  _recognizebak.py  best.tflite  emnist.h5  emnist.tflite  emnist_letter.tflite  minebak.h5  pyproject.toml  requirements.txt  requirements_reqs.txt
