[tool.poetry]
name = "nonebot2-uocr-low"
version = "1.0.0"
description = "nonebot2_uocr_low"
authors = ["canxin121 <69547456+canxin121@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "nonebot2_uocr_low"}]

[tool.poetry.dependencies]
python = ">3.8"
keras = "^2.12.0"
nonebot = "^1.9.1"
numpy = "^1.24.2"
pydantic = "^1.10.7"
opencv-python-headless = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
